<resources>
    <string name="app_name">Inventario</string>

    <string name="Login">Iniciar sesión</string>
    <string name="Usuario">Usuario</string>
    <string name="Contraseña">Contraseña</string>
    <string name="btnIngresar">Ingresar</string>
    <string name="btnRegistrarse">Registrarse</string>
    <string name="btnSalir">Salir</string>

    <string name="RegistrarUsuario">Registrar Usuario</string>
    <string name="Nombre">Nombre</string>
    <string name="btnRegistrar">Registrar</string>
    <string name="btnCancelar">Cancelar</string>

    <string name="Bienvenidos">Bienvenidos</string>
    <string name="btnBuscar">Buscar</string>

    <string name="textoIncio">BIENVENIDO</string>
    <string name="tipo">Tipo</string>
    <string name="valor">Valor</string>
    <string name="stock">Stock</string>
    <string name="btnFoto">Foto</string>
    <string name="btnInsertar">Insertar</string>
    <string name="btnVolver">Volver</string>

    <string name="txtBuscar">Buscar Por Nombre</string>
    <string name="txtNombre">Ingrese Nuevo Nombre</string>
    <string name="txtStock"> Ingrese Nuevo Stock</string>
    <string name="txtValor"> Ingrese Nuevo Valor</string>
    <string name="btnEliminar">Eliminar</string>
    <string name="btnActualizar">Actualizar</string>
    <string name="btnListar">Listar</string>
    
    <string name="btnVersion">Version</string>

    <string name="idiomaPorDefecto">Español</string>
</resources>
