<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.marchelo.inventario.ingresarDatos">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/textoIncio"
        android:id="@+id/lblBienvenido"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center_horizontal" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Nombre"
        android:id="@+id/txtNombre"
        android:layout_below="@+id/lblBienvenido"/>

    <EditText
        android:layout_width="146dp"
        android:layout_height="wrap_content"
        android:id="@+id/Nombre"
        android:layout_below="@+id/txtNombre"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignRight="@+id/lblBienvenido"
        />


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/valor"
        android:id="@+id/txtValor"
        android:layout_below="@+id/Nombre"/>

    <EditText
        android:layout_width="144dp"
        android:layout_height="wrap_content"
        android:id="@+id/Valor"
        android:inputType="number"
        android:layout_below="@+id/txtValor"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignRight="@+id/lblBienvenido"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/stock"
        android:id="@+id/txtStock"
        android:layout_below="@+id/Valor" />

    <EditText
        android:layout_width="143dp"
        android:layout_height="wrap_content"
        android:id="@+id/Stock"
        android:inputType="number"
        android:layout_below="@+id/txtStock"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignRight="@+id/lblBienvenido"
        />
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btnFoto"
        android:id="@+id/button"
        android:onClick="tomarFoto"
        android:layout_gravity="center_horizontal"
        android:layout_below="@+id/Stock"
        android:layout_alignStart="@+id/lblBienvenido" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/imageView"
        android:layout_centerVertical="true"
        android:layout_below="@+id/button"
        android:layout_alignStart="@+id/button"
        android:layout_marginStart="25dp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/Insertar"
        android:text="@string/btnInsertar"
        android:layout_gravity="center_horizontal"
        android:onClick="guardarProducto"
        android:layout_below="@+id/button"
        android:layout_toEndOf="@+id/txtValor" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btnVolver"
        android:id="@+id/btnVolver"
        android:onClick="volver"
        android:layout_alignBottom="@+id/Insertar"
        android:layout_toEndOf="@+id/Stock" />

</RelativeLayout>
